src/objects/Borrowed_Books__c.object
<CustomObject>
    <description>Books borrowed by staff/students/employees/others</description>
    <fields>
        <fullName>Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for borrowed book</description>
        <inlineHelpText>Lookup for borrowed book</inlineHelpText>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Borrowed Books</relationshipLabel>
        <relationshipName>Borrowed_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_in_hrs__c</fullName>
        <formula>if( ((Now()  -  Start_Date_Time__c)* 24) &lt; 0 , 0 , ((Now()  -  Start_Date_Time__c)* 24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration in hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>End date and time</description>
        <inlineHelpText>End date and time</inlineHelpText>
        <label>End Date(Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date on which book to be returned</description>
        <inlineHelpText>Date on which book to be returned</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Fees__c</fullName>
        <formula>IF( Duration_in_hrs__c &gt; 168  &amp;&amp;    NOT(ISPICKVAL(Status__c,&apos;Returned&apos;)),(((Duration_in_hrs__c/24)- ( End_Date__c  -  Start_Date__c ))*10) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_Account__c</fullName>
        <description>Library of Staff/Student/Employee/Other</description>
        <inlineHelpText>Library of Staff/Student/Employee/Other</inlineHelpText>
        <label>Library Account</label>
        <referenceTo>Library_Account__c</referenceTo>
        <relationshipLabel>Borrowed Books</relationshipLabel>
        <relationshipName>Borrowed_Books</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Returned_by_name__c</fullName>
        <description>name of the person who returned the book</description>
        <inlineHelpText>name of the person who returned the book</inlineHelpText>
        <label>Returned by name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_by_type__c</fullName>
        <description>Book returned by whom? Student / Staff / Employee</description>
        <inlineHelpText>Book returned by whom? Student / Staff / Employee</inlineHelpText>
        <label>Returned by type</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Start date and time</description>
        <inlineHelpText>Start date and time</inlineHelpText>
        <label>Start Date (Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date book borrowed</description>
        <inlineHelpText>Date book borrowed</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Book status</description>
        <inlineHelpText>Book status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Borrowed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>date_of_returned__c</fullName>
        <description>Date on which book is returned</description>
        <inlineHelpText>Date on which book is returned</inlineHelpText>
        <label>date of returned</label>
        <type>DateTime</type>
    </fields>
    <label>Borrowed Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Borrowed Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrowed Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_cate_cannot_be_greater_than_end_da</fullName>
        <active>true</active>
        <description>Start date cannot be greater than end date</description>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>START DATE CANNOT BE GREATER THAN END DATE!!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>startandend_time_should_be_proper</fullName>
        <active>true</active>
        <description>Start Date Time should not be greater than end date time</description>
        <errorConditionFormula>Start_Date_Time__c &gt;  End_Date_Time__c</errorConditionFormula>
        <errorDisplayField>Start_Date_Time__c</errorDisplayField>
        <errorMessage>START DATE(TIME) CAN NOT BE GREATER THAN END DATE(TIME)</errorMessage>
    </validationRules>
</CustomObject>